Prepare netsight.windowsauthplugin 1.2.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.2 (2013-03-18)
+----------------
+
+- Works with subrequests now (p.a.theming)
+
 0.9dev (unreleased)
 -------------------
 
