--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.3 (2013-03-18)
+----------------
+
+- Fixed missing README.txt in last release
+
 1.2 (2013-03-18)
 ----------------
 
