--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -2,12 +2,13 @@
 --------------
 
 - This is a major change
-- All LDAP code has been removed. If you want to use LDAP to look up 
+- All LDAP code has been removed. If you want to use LDAP to look up
   user details then use a separate LDAP PAS plugin
-- The kerberos python library is now only installed if you add [unix] 
+- The kerberos python library is now only installed if you add [unix]
   option with the egg
 - We now decode the username to Unicode before returning it
-
+- Add default configuration profile for mixed authentication environments
+  [datakurre]
 
 1.1 2013-03-18
 --------------
