--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,8 @@
+2.2 2014-03-05
+--------------
+
+- add missing __init__.py [giacomos]
+
 2.1 2014-02-10
 --------------
 
@@ -13,6 +18,17 @@
 - The kerberos python library is now only installed if you add [unix]
   option with the egg
 - We now decode the username to Unicode before returning it
+
+
+1.3 (2013-03-18)
+----------------
+
+- Fixed missing README.txt in last release
+
+1.2 (2013-03-18)
+----------------
+
+- Works with subrequests now (p.a.theming)
 
 1.1 2013-03-18
 --------------
