--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,23 @@
 Changelog
 =========
 
+2.2 (2014-03-17)
+----------------
+
+- Added missing __init__.py for mixed-auth profile [giacomos]
+- Mixed-auth helper now redirects to 'logged_in' to continue standard plone login process
+
+2.1 (2014-02-10)
+----------------
+
+- Fix unicode usernames [matth]
+- JS helper and GS profile for mixed-auth environments [datakurre]
+
+2.0 (2014-03-17)
+----------------
+
+- Major code overhaul [matth]
+
 1.3 (2013-03-18)
 ----------------
 
