--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,8 @@
+2.3.1 (unreleased)
+-----------------
+
+- Fixed issue with 'came_from' redirects not working correctly
+
 2.3 (2014-03-17)
 ----------------
 
