--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,8 +1,8 @@
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- Allow PAS plugin loading to continue in debug mode (development) with an error warning if the kerberos library cannot be loaded on unix.
+  [fredvd]
 
 2.3.1 (2014-07-04)
 ------------------
